--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "toin0u/digitalocean",
     "type": "library",
     "description": "DigitalOcean API PHP 5.3+ library",
-    "keywords": ["DigitalOcean", "API"],
+    "keywords": ["DigitalOcean", "API", "Cloud Hosting", "SSD", "VPS"],
     "homepage": "https://github.com/toin0u/DigitalOcean",
     "license": "MIT",
     "authors": [
