--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,11 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
+        "kriswallsmith/buzz": "@stable",
         "ext-curl" : "*"
+    },
+    "suggest": {
+        "kriswallsmith/buzz": "Enabling Buzz allows you to use the BuzzHttpAdapter."
     },
     "autoload": {
         "psr-0": { "DigitalOcean": "src/" }
