--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,16 @@
         "source": "https://github.com/toin0u/DigitalOcean"
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "ext-curl" : "*"
     },
     "require-dev": {
         "kriswallsmith/buzz": "@stable",
-        "ext-curl" : "*"
+        "guzzle/guzzle": "@stable"
     },
     "suggest": {
-        "kriswallsmith/buzz": "Enabling Buzz allows you to use the BuzzHttpAdapter."
+        "kriswallsmith/buzz": "Enabling Buzz allows you to use the BuzzHttpAdapter.",
+        "guzzle/guzzle": "Enabling Guzzle allows you to use the GuzzleHttpAdapter."
     },
     "autoload": {
         "psr-0": { "DigitalOcean": "src/" }
