--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,9 @@
         "zendframework/zendframework": "~2.1"
     },
     "suggest": {
-        "kriswallsmith/buzz": "Enabling Buzz allows you to use the BuzzHttpAdapter.",
-        "guzzle/guzzle": "Enabling Guzzle allows you to use the GuzzleHttpAdapter.",
-        "zendframework/zendframework": "Enabling Zend Http allows you to use the ZendHttpAdapter."
+        "kriswallsmith/buzz": "Enabling Buzz allows you to use the BuzzHttpAdapter",
+        "guzzle/guzzle": "Enabling Guzzle allows you to use the GuzzleHttpAdapter",
+        "zendframework/zendframework": "Enabling Zend Http allows you to use the ZendHttpAdapter"
     },
     "autoload": {
         "psr-0": { "DigitalOcean": "src/" }
