--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     },
     "require": {
         "php": ">=5.3.0",
-        "ext-curl" : "*"
+        "ext-curl" : "*",
+        "symfony/console": "~2.0",
+        "symfony/yaml": "~2.2"
     },
     "require-dev": {
         "kriswallsmith/buzz": "@stable",
@@ -34,6 +36,7 @@
     "autoload": {
         "psr-0": { "DigitalOcean": "src/" }
     },
+    "bin": ["digitalocean"],
     "extra": {
         "branch-alias": {
             "dev-master": "0.2-dev"
