--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "php": ">=5.3.0",
         "ext-curl" : "*",
         "symfony/console": "~2.0",
-        "symfony/yaml": "~2.2"
+        "symfony/yaml": "~2.2",
+        "satooshi/php-coveralls": "~0.6"
     },
     "require-dev": {
         "kriswallsmith/buzz": "@stable",
