--- a/composer.json
+++ b/composer.json
@@ -22,17 +22,10 @@
         "ext-curl" : "*",
         "symfony/console": "~2.0",
         "symfony/yaml": "~2.2",
-        "satooshi/php-coveralls": "~0.6"
+        "toin0u/http-adapter": "~1.0"
     },
     "require-dev": {
-        "kriswallsmith/buzz": "@stable",
-        "guzzle/guzzle": "@stable",
-        "zendframework/zendframework": "~2.1"
-    },
-    "suggest": {
-        "kriswallsmith/buzz": "Enabling Buzz allows you to use the BuzzHttpAdapter",
-        "guzzle/guzzle": "Enabling Guzzle allows you to use the GuzzleHttpAdapter",
-        "zendframework/zendframework": "Enabling Zend Http allows you to use the ZendHttpAdapter"
+        "satooshi/php-coveralls": "~0.6"
     },
     "autoload": {
         "psr-0": { "DigitalOcean": "src/" }
